Integrate OpenCV and YOLO model training improvements
Added OpenCV as a dependency in CMake and updated C++ code to decode and process images using OpenCV, with threat detection response logic. Enhanced YOLO model training script in Python with explicit training parameters, augmentation, and checkpointing for improved model management and reproducibility.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -16,16 +16,25 @@ set(WDS_SOURCES
 # Define an executable target
 add_executable(wds_program ${WDS_SOURCES})
 
-# ... other setup ..
+find_package(OpenCV REQUIRED)
+
 
 # 1. Find the Boost package and components
 # Note: FindBoost is deprecated (as noted by the warning), but still works
 # for now.
-find_package(Boost 1.89.0 REQUIRED  ) 
+find_package(Boost 1.89.0 REQUIRED  )
 
 # 2. Add include directories for headers
+# For OpenCV: include_directories is okay, but this is better:
+target_include_directories(wds_program PRIVATE ${OpenCV_INCLUDE_DIRS})
+
+# For Boost:
 target_include_directories(wds_program PRIVATE ${Boost_INCLUDE_DIRS})
+
 
 # 3. Link the Boost libraries using the modern target syntax
 # This is the crucial step that links the required library.
-target_link_libraries(wds_program PRIVATE )
+target_link_libraries(wds_program PRIVATE 
+    ${OpenCV_LIBS}         
+    ${Boost_LIBRARIES}      
+)
