Make secrets.h for c++ server, delete unused python files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ venv
 *.d
 yolov5/
 datasets/
+server/src/secrets.h
 server/models/weapon_data/weapon_data/
 server/models/yolov5/
 # Compiled Object files
